WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300330
Crash in WebKit: WebKit::WebExtensionContext::declarativeNetRequestUpdateDynamicRules
https://bugs.webkit.org/show_bug.cgi?id=300330
Summary
Crash in WebKit: WebKit::WebExtensionContext::declarativeNetRequestUpdateDyna...
Elijah Sawyers
Reported
2025-10-07 09:09:51 PDT
rdar://161999838
Attachments
Add attachment
proposed patch, testcase, etc.
Elijah Sawyers
Comment 1
2025-10-07 10:20:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51950
EWS
Comment 2
2025-10-08 09:29:51 PDT
Committed
301212@main
(a8daa1741f67): <
https://commits.webkit.org/301212@main
> Reviewed commits have been landed. Closing PR #51950 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug